# checkcp

./: .gitignore  CMakeLists.txt  LICENSE  MakeFile  README.md
src/: checksum.cpp  checksum.h  main.cpp
